    - OLD style mact URL's can be processed by default, but this may change in later versions
  - CHANGE: Add and remove some tests from the systeminfo page.
  - CHANGE: Minor improvements to the test functions
  - CHANGE: Improvements to the is_sitedown() stuff, and the get_real_ip() function.

News2 v1.0
  - New core module that is similar to, but not directly compatible with News.

CMSContentManager - 1.2
  - REMOVED: Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - FEATURE: Adds expand/functionality into reorder content (TODO: needs styling)
  - FEATURE: Adds new 'add child here' icon in the content list.
  - FEATURE: Find functionality in content list can now search on page alias and url.
  - FEATURE: Allow setting the default content page from within the page edit form (for pages where it is possible, and permission allows)
  - FEATURE: New bulk action for when page_template_list is correctly defined in the config to allow setting bulk pages to a template resource.
  - FEATURE: When page_template_list is defined hide the set design and template bulk action
  - FEATURE: Each page can now display some info in the dynamic tooltip that is displayed.

Installation Assistant - v1.4
  - Now require at least version 2.0.1 to upgrade
  - Now test the default character set
  - Now require at least PHP 7.1 and recommend 7.2+
  - Upgrade to smarty v3.1.32
  - CURL is now a requirement
  - ZipArchive is now a requirement (at least for the installer)
  - no longer change the config file on upgrade.  Though we will for install and freshen.
  - Now install default theme from a zip file into the /assets/simplex directory (hardcoded)
  - Now install default content from an XML file exported by CGCU
  - The basic installer no longer emails the admin account information