@@ -174,6 +174,8 @@ Core - General
   - CHANGE: Add and remove some tests from the systeminfo page.
   - CHANGE: Minor improvements to the test functions
   - CHANGE: Improvements to the is_sitedown() stuff, and the get_real_ip() function.
+  - REMOVED: the dump plugin because it relied on smart internals, and was problematic.
+  - IMPROVED: Add some minor functionality to the get_template_vars plugin.
 
 News2 v1.0
   - New core module that is similar to, but not directly compatible with News.
